dev/test_programs/INVALID/group1/funcdec5.go
package main;

func test (a int; b int){}
